--- a/Notebooks/03. Silver - Traffic Transformations.ipynb
+++ b/Notebooks/03. Silver - Traffic Transformations.ipynb
@@ -47,10 +47,7 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
+     "cellMetadata": {},
      "inputWidgets": {},
      "nuid": "35c56126-bd1a-487c-8f02-467e407d32f3",
      "showTitle": false,
@@ -94,10 +91,7 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
+     "cellMetadata": {},
      "inputWidgets": {},
      "nuid": "80e6222b-9fc3-42b9-b7c7-8c25bef09607",
      "showTitle": false,
@@ -138,10 +132,7 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
+     "cellMetadata": {},
      "inputWidgets": {},
      "nuid": "93a897ef-be60-41f1-8a18-1562c2774372",
      "showTitle": false,
@@ -189,10 +180,7 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
+     "cellMetadata": {},
      "inputWidgets": {},
      "nuid": "41c69019-04fb-4bfa-93e8-dd005459bea5",
      "showTitle": false,
@@ -237,10 +225,7 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
+     "cellMetadata": {},
      "inputWidgets": {},
      "nuid": "e110b01d-b1c2-4dfa-8a19-5117bd0dcb17",
      "showTitle": false,
@@ -286,10 +271,7 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
+     "cellMetadata": {},
      "inputWidgets": {},
      "nuid": "369c65b1-3495-4693-9f03-e988bdcf7c62",
      "showTitle": false,
@@ -333,10 +315,7 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
+     "cellMetadata": {},
      "inputWidgets": {},
      "nuid": "29a4ad19-5681-4639-b3c5-c0cb714d20a9",
      "showTitle": false,
