--- a/Notebooks/05. Silver - Roads Transformation.ipynb
+++ b/Notebooks/05. Silver - Roads Transformation.ipynb
@@ -47,10 +47,7 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
+     "cellMetadata": {},
      "inputWidgets": {},
      "nuid": "9ae8c6e6-1829-4535-8983-5609798103c7",
      "showTitle": false,
@@ -115,10 +112,7 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
+     "cellMetadata": {},
      "inputWidgets": {},
      "nuid": "23e9109e-7c07-475c-b554-29acd09901c7",
      "showTitle": false,
@@ -170,10 +164,7 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
+     "cellMetadata": {},
      "inputWidgets": {},
      "nuid": "8517c419-1b89-45e9-a97d-9a4adfe395cc",
      "showTitle": false,
@@ -222,10 +213,7 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
+     "cellMetadata": {},
      "inputWidgets": {},
      "nuid": "aad8ca35-9262-41ae-a1f9-ea15b2f5c8d8",
      "showTitle": false,
@@ -274,10 +262,7 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
+     "cellMetadata": {},
      "inputWidgets": {},
      "nuid": "151e29cd-fea4-41d5-a414-3c5cc8f06cbf",
      "showTitle": false,
