--- a/Notebooks/06. Gold filnal transformation and landing.ipynb
+++ b/Notebooks/06. Gold filnal transformation and landing.ipynb
@@ -47,10 +47,7 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
+     "cellMetadata": {},
      "inputWidgets": {},
      "nuid": "253b2872-dcf2-4f7f-ae6d-0aa60efb6706",
      "showTitle": false,
@@ -94,10 +91,7 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
+     "cellMetadata": {},
      "inputWidgets": {},
      "nuid": "a37cd418-17c8-43ed-b5fe-8cadf4ec43bf",
      "showTitle": false,
@@ -142,10 +136,7 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
+     "cellMetadata": {},
      "inputWidgets": {},
      "nuid": "d81652b9-8bb1-416e-b83a-a0349437b7d3",
      "showTitle": false,
@@ -190,10 +181,7 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
+     "cellMetadata": {},
      "inputWidgets": {},
      "nuid": "74999bcc-e370-4c82-bef3-e0d38ba9184b",
      "showTitle": false,
@@ -238,10 +226,7 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
+     "cellMetadata": {},
      "inputWidgets": {},
      "nuid": "ed009a9e-a5c5-4e3e-a3a3-1b07f83d11cd",
      "showTitle": false,
@@ -291,10 +276,7 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
+     "cellMetadata": {},
      "inputWidgets": {},
      "nuid": "5bf81bf0-f8e4-4a98-9fcf-37878bc3ee91",
      "showTitle": false,
@@ -343,10 +325,7 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
+     "cellMetadata": {},
      "inputWidgets": {},
      "nuid": "70430f92-8fd2-4190-ab64-4ec92933cbe6",
      "showTitle": false,
